# densecrf

./: CMakeLists.txt  package.xml
examples/: CMakeLists.txt  cheating_students.cpp  dense_inference_gpu.cu  graph.cpp
include/: densecrf.h  densecrf_gpu.cuh  pairwise_gpu.cuh  permutohedral_gpu.cuh
src/: CMakeLists.txt  densecrf.cpp  densecrf_gpu.cu  pairwise_gpu.cu  permutohedral_gpu.cu
